# jvlm

./: .gitignore  Cargo.toml  README.md
crates/cstr_ops/: Cargo.toml
crates/cstr_ops/src/: lib.rs
crates/java_support_lib/: .gitignore  Cargo.toml  build.rs  pom.xml
crates/java_support_lib/jsrc/jvlm/support/: MemorySegmentStack.java  Stack.java
crates/java_support_lib/src/: lib.rs
rustc_codegen_jvlm/: .gitignore  Cargo.toml  build.rs
rustc_codegen_jvlm/src/: lib.rs
src/: java_types.rs  lib.rs  llvm_intrinsics.rs  main.rs  memory.rs  options.rs
src/classfile/: constant_pool.rs  descriptor.rs  mod.rs
src/linker/: mod.rs
test/: .gitignore  compile.py  test_manager.py
test/c/: basic_ternary.c  double_mul.c  include_as_resource.c  loop.c  pointer.c  simple_call.c  single_add.c  stack_test.c
test/rust/simple_add/: Cargo.toml
test/rust/simple_add/src/: lib.rs
