[workspace]
resolver = "3"
members = ["rustc_codegen_jvlm"]

[package]
name = "jvlm"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytebuffer = "2.3.0"
byteorder = "1.5.0"
indexmap = "2.9.0"
inkwell = { version = "0.6.0", features = ["llvm16-0"] }
zip = "4.2.0"
