[workspace]
resolver = "3"
members = [ "crates/cstr_ops", "crates/java_support_lib","rustc_codegen_jvlm"]

[package]
name = "jvlm"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Used when compiling for use in rustc
dynamic-link = [ "llvm-sys/no-llvm-linking" ]

[dependencies]
bytebuffer = "2.3.0"
byteorder = "1.5.0"
indexmap = "2.9.0"
llvm-sys = { version = "*" }
inkwell = { git = "https://github.com/stevefan1999-personal/inkwell.git", features = ["llvm20-1"], default-features = false}
zip = "4.2.0"
java_support_lib = { path = "crates/java_support_lib" }
cstr_ops = { path = "crates/cstr_ops" }
