[package]
name = "rustc_codegen_jvlm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
jvlm = { path = "../" }

[build-dependencies]
cc = "1.2.27"
toml = "0.8.23"
wax = "0.6.0"

[package.metadata.rust-analyzer]
rustc_private = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(llvm_enzyme)'] }
